--- a/css/index.css
+++ b/css/index.css
@@ -5,9 +5,38 @@
     text-decoration: none;
     list-style: none;
 }
+
+.cuerpo{
+    font-family:Arial, Helvetica, sans-serif;
+}
 a, li {
     font-family: Arial, Helvetica, sans-serif;
     color: #fff;
+}
+
+.contenedor {
+    padding: 60px 0;
+    width: 90%;
+    max-width: 1000px;
+    margin: auto;
+    overflow: hidden;
+}
+
+.titulo {
+    color: #25346c;
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 60px;
+    font-family:Arial, Helvetica, sans-serif;
+    
+}
+.sub-titulo {
+    color: #25346c;
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 60px;
+    font-family:Arial, Helvetica, sans-serif;
+    
 }
 
 /*Logo de la barra de navegacion*/
@@ -23,7 +52,23 @@ a, li {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: .5rem 2rem;
+}
+
+.textos-header h1{
+    font-size: 50px;
+    color:#fff;
+}
+
+.textos-header h2{
+    font-size: 30px;
+    font-weight: 300;
+    color:#fff;
+}
+
+.wave{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 .menu ul{
@@ -45,76 +90,154 @@ a, li {
     border: 2px solid #cf152b;
     padding: .25rem .75rem;
     border-radius: .2rem;
+
 }
 .menu li:last-child:hover{
     background: transparent;
     border: 2px solid #cf152b;  
-    
+  
+}
+
+/* About us */
+
+main .sobre-nosotros{
+    padding: 30px 0 60px 0;
+}
+.contenedor-sobre-nosotros{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.imagen-about-us{
+    width: 48%;
+}
+
+.sobre-nosotros .contenido-textos{
+    width: 48%;
+}
+
+.contenido-textos h3{
+    margin-bottom: 15px;
+}
+
+.contenido-textos h3 span{
+    background: #4d0686;
+    color: #fff;
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+    width: 30px;
+    height: 30px;
+    padding: 2px;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+    margin-right: 5px;
+}
+
+.contenido-textos p{
+    padding: 0px 0px 30px 15px;
+    font-weight: 300;
+    text-align: justify;
 }
 
 
 /*Portada*/
 .portada-titulo h1, h5{
     font-family:Arial, Helvetica, sans-serif;
+}
 
-
+.carousel-item img {
+    height:570px;
 }
 
 
 
+/* Galeria */
 
-
-
-
-
-
-
-
-
-
-
-
-
-/*
-.slider{
-    width: 100%;
-    margin: auto;
-    height: 900px;
-    overflow: hidden;
+.portafolio{
+    background: #f2f2f2;
 }
-.slider ul{
+
+.galeria-port{
     display: flex;
-    padding: 0;
-    width: 400%;
-
-    animation: cambio 20s infinite alternate linear;
-
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
-.slider li{
+.imagen-port{
+    width: 30%;
+    margin-bottom: 10px;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+}
+
+.imagen-port > img{
     width: 100%;
-    list-style: none;
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
-.slider img{
+
+.hover-galeria{
+    position: absolute;
     width: 100%;
+    height: 100%;
+    top: 0;
+    transform: scale(0);
+    background: rgba(224, 28, 28, 0.7);
+    transition: transform .5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-@keyframes cambio {
-    0% {margin-left: 0;}
-    20% {margin-left: 0;}
+.hover-galeria img{
+    width: 50px;
+}
 
-    25%{margin-left: -100%;}
-    45%{margin-left: -100%;}
+.hover-galeria p{
+    color: #fff;
+}
 
-    50%{margin-left: -200%;}
-    70%{margin-left: -200%;}
+.imagen-port:hover .hover-galeria{
+    transform: scale(1);
+}
 
-    75%{margin-left: -300%;}
-    100%{margin-left: -300%;}
-}*/
+/* Clients */
 
+.cards{
+    display: flex;
+    justify-content: space-evenly;
+}
 
+.cards .card{
+    background: #4d0686;
+    display: flex;
+    width: 46%;
+    height: 200px;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 5px;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6);
+}
 
-body{
-    font-family:Arial, Helvetica, sans-serif;
+.cards .card img{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border: 3px solid #fff;
+    border-radius: 50%;
+    display: block;
+}
+
+.cards .card > .contenido-texto-card{
+    width: 60%;
+    color: #fff;
+}
+
+.cards .card > .contenido-texto-card p{
+    font-weight: 300;
+    padding-top: 5px;
 }
